<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.jevon.passwordbook.viewmodel.MainViewModel" />

        <variable
            name="view"
            type="android.view.View" />

    </data>


    <android.support.v4.widget.DrawerLayout
        android:id="@+id/drawerlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:openDrawer="start">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar_main"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_alignParentTop="true"
                android:background="@color/colorPrimary"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:navigationIcon="@drawable/toolbar_menu"
                app:popupTheme="@style/Theme.AppCompat.Light"
                tools:ignore="MissingConstraints">

                <android.support.v7.widget.SearchView
                    android:id="@+id/search_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:imeOptions="actionSearch" />
            </android.support.v7.widget.Toolbar>

            <android.support.v4.widget.SwipeRefreshLayout
                android:id="@+id/layout_refresh"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/toolbar_main">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler_View"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adapter="@{vm.adapter}" />
            </android.support.v4.widget.SwipeRefreshLayout>

            <TextView
                android:id="@+id/empty_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/no_date"
                android:textSize="15sp"
                android:textStyle="bold"
                android:visibility="@{vm.listSize>0?view.GONE:view.VISIBLE}" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_margin="20dp"
                android:onClick="@{(v)->vm.buttonClick(v)}"
                android:src="@drawable/main_fab" />

        </RelativeLayout>


        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="@color/drawer_bg"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@color/colorPrimary">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/contentDescription"
                    android:src="@drawable/drawer_head" />

            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/date"
                android:textColor="@color/colorPrimary" />

            <LinearLayout
                android:id="@+id/layout_clear_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_drawer_item"
                android:gravity="center_vertical"
                android:onClick="@{(v)->vm.buttonClick(v)}"
                android:orientation="horizontal"
                android:padding="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:drawableStart="@drawable/drawer_clean"
                    android:gravity="center"
                    android:text="@string/clean_date" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:id="@+id/layout_backup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_drawer_item"
                android:gravity="center_vertical"
                android:onClick="@{(v)->vm.buttonClick(v)}"
                android:orientation="horizontal"
                android:padding="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:drawableStart="@drawable/drawer_backup"
                    android:gravity="center"
                    android:text="@string/backups_date" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:id="@+id/layout_import"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_drawer_item"
                android:gravity="center_vertical"
                android:onClick="@{(v)->vm.buttonClick(v)}"
                android:orientation="horizontal"
                android:padding="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:drawableStart="@drawable/drawer_import"
                    android:gravity="center"
                    android:text="@string/import_date" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/other"
                android:textColor="@color/colorPrimary" />

            <LinearLayout
                android:id="@+id/layout_modify_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_drawer_item"
                android:gravity="center_vertical"
                android:onClick="@{(v)->vm.buttonClick(v)}"
                android:orientation="horizontal"
                android:padding="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:drawableStart="@drawable/drawer_modify"
                    android:gravity="center"
                    android:text="@string/modify_password" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:id="@+id/layout_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_drawer_item"
                android:gravity="center_vertical"
                android:onClick="@{(v)->vm.buttonClick(v)}"
                android:orientation="horizontal"
                android:padding="10dp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:drawableStart="@drawable/drawer_about"
                    android:gravity="center"
                    android:text="@string/about" />
            </LinearLayout>
        </LinearLayout>

    </android.support.v4.widget.DrawerLayout>


</layout>